tests/baselines/reference/moduleAndInterfaceSharingName3.errors.txt
moduleAndInterfaceSharingName3.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleAndInterfaceSharingName3.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleAndInterfaceSharingName3.ts (2 errors) ====
    module X {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module Y {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface Z { }
        }
        export interface Y<T> { }
    }
    var z: X.Y.Z = null;
    var z2: X.Y<string>;